<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/btnAgregarRecurso"
        android:text="@string/add_resource_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnVerRecursos"
        android:text="@string/view_resources_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:text="@string/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
